--- a/frontend_react/src/container/Header/gridimage/grid.css
+++ b/frontend_react/src/container/Header/gridimage/grid.css
@@ -1,12 +1,15 @@
 
 .bg1 {
   background: url('../../../assets/profile.png');
-  object-fit: contain;
+  background-position: center;
+  object-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 .one {
   grid-area: hd;
   width: 100px;
-  height: 70px;
+  height: 50px;
   /* margin-left: 200px; */
 }
 .two {
@@ -17,18 +20,18 @@
 .three {
   grid-area: main;
   width: 100px;
-  height: 150px;
+  height: 120px;
   /* margin-left: -50px; */
 }
 .four {
   grid-area: sd;
-  width: 120px;
+  width: 100px;
   /* margin-left: 180px; */
 }
 .five{
   grid-area: fi;
   width: 100px;
-  height: 70px;
+  height: 50px;
 }
 .six{
   grid-area: si;
@@ -38,7 +41,7 @@
 .seven {
   grid-area: se;
   width: 70px;
-  height:70px;
+  height:50px;
   /* margin-left: 230px; */
   margin-top: -2px;
 }
@@ -50,7 +53,7 @@
   grid-area: ni;
   width: 100px;
   /* margin-left: 200px; */
-  height: 170px;
+  height: 150px;
 }
 .ten {
   grid-area: te;
@@ -77,22 +80,18 @@
     "se  ei  te"
     ".  ei  el"
     ;
-  width: fit-content;
+  width:100;
   height: fit-content;
   z-index: 1;
-  width: 100% !important;
 }
 
 
 
 .wrapper > div {
-  background-size: cover;
-  background-attachment: fixed;
+  margin-left: -10rem;
   border-radius: 15px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
+/* backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px); */
+  border: 2px solid rgba(255, 255, 255, 0.18);
   transition: all 0.5s ease-in;
 }
