--- a/frontend_react/src/App.scss
+++ b/frontend_react/src/App.scss
@@ -48,6 +48,7 @@
   p {
     text-transform: uppercase;
     color: var(--black-color);
+
   }
 }
 
@@ -76,6 +77,8 @@
   text-align: left;
   color: var(--gray-color);
   line-height: 1.5;
+   font-family: var(--font-primary);
+   font-weight: 600;
 
   @media screen and (min-width: 2000px) {
     font-size: 1.75rem;
@@ -104,7 +107,9 @@
   flex-direction: column;
 
   padding: 1rem;
-
+a{
+  cursor: pointer;
+}
   div {
     width: 40px;
     height: 40px;
