--- a/frontend_react/src/components/Navbar/Navbar.scss
+++ b/frontend_react/src/components/Navbar/Navbar.scss
@@ -21,12 +21,12 @@
   align-items: center;
 
   img {
-    width: 90px;
+    width: 100%;
     height: 20px;
 
     @media screen and (min-width: 2000px) {
-      width: 180px;
-      height: 40px;
+      width: 100%;
+      height: 100%;
     }
   }
 }
