--- a/frontend_react/src/container/Footer/Footer.scss
+++ b/frontend_react/src/container/Footer/Footer.scss
@@ -119,7 +119,10 @@
     cursor: pointer;
 
     &:hover {
-      background-color: #2430af;
+      background-color: #fff;
+      border: 1px solid #d61249;
+      color: #d61249;
+      font-weight: 900;
     }
   }
 
