--- a/frontend_react/src/container/Header/Header.scss
+++ b/frontend_react/src/container/Header/Header.scss
@@ -1,6 +1,6 @@
 #home {
   position: relative;
-  background: url("../../assets/bgIMG.png");
+  background: url("../../assets/bgWhite.png");
   background-size: cover;
   background-position: center;
   background-repeat: repeat;
@@ -78,6 +78,7 @@
       width: 100%;
       text-transform: uppercase;
       text-align: right;
+      font-family: var(--font-primary);
     }
   }
 
