--- a/frontend_react/src/index.css
+++ b/frontend_react/src/index.css
@@ -1,14 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda:opsz@6..96&family=Cormorant+Garamond:wght@400;700&family=Noto+Serif+Display:wght@100;300;400&family=Source+Sans+Pro:wght@400;600;700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 
 :root {
-  --font-base: "DM Sans", sans-serif;
-
+  --font-base: "Noto Serif Display", sans-serif;
+--font-primary:  'Source Sans Pro', sans-serif;
   --primary-color: #edf2f8;
-  --secondary-color: #313bac;
+  --secondary-color: #d61249;
   --black-color: #030303;
   --lightGray-color: #e4e4e4;
   --gray-color: #6b7688;
