--- a/frontend_react/src/App.scss
+++ b/frontend_react/src/App.scss
@@ -1,14 +1,6 @@
 .app {
-  background-color: var(--primary-color);
   font-family: var(--font-base);
-}
-
-.app__whitebg {
-  background-color: var(--white-color);
-}
-
-.app__primarybg {
-  background-color: var(--primary-color);
+  font-size: 1.6rem;
 }
 
 .app__container {
@@ -47,7 +39,7 @@
 
   p {
     text-transform: uppercase;
-    color: var(--black-color);
+    color: var(--white-color);
 
   }
 }
@@ -56,7 +48,7 @@
   font-size: 2.75rem;
   font-weight: 800;
   text-align: center;
-  color: var(--black-color);
+  color: var(--white-color);
   text-transform: capitalize;
 
   span {
