--- a/frontend_react/src/container/Footer/Footer.scss
+++ b/frontend_react/src/container/Footer/Footer.scss
@@ -27,7 +27,8 @@
     padding: 1rem;
     border-radius: 10px;
     cursor: pointer;
-    background-color: #fef4f5;
+   background-color: transparent;
+ border: 1px solid rgb(60, 59, 59);
 
     transition: all 0.3s ease-in-out;
 
@@ -45,7 +46,7 @@
       font-weight: 500;
     }
     &:hover {
-      box-shadow: 0 0 25px #fef4f5;
+      box-shadow: 0 0 25px #1f1d1d;
     }
 
     @media screen and (max-width: 450px) {
@@ -59,11 +60,12 @@
 }
 
 .app__footer-cards .app__footer-card:last-child {
-  background-color: #f2f7fb;
+ background-color: transparent;
+ border: 1px solid rgb(60, 59, 59);
 }
 
 .app__footer-cards .app__footer-card:last-child:hover {
-  box-shadow: 0 0 25px #f2f7fb;
+  box-shadow: 0 0 25px #1f1d1d;
 }
 
 .app__footer-form {
@@ -73,12 +75,9 @@
 
   div {
     width: 100%;
-
     margin: 0.75rem 0;
-    border-radius: 10px;
     cursor: pointer;
-    background-color: var(--primary-color);
-
+    // border-bottom: 1px  solid rgb(60, 59, 59);
     transition: all 0.3s ease-in-out;
 
     input,
@@ -86,20 +85,23 @@
       width: 100%;
       padding: 0.95rem;
       border: none;
-      border-radius: 7px;
       background-color: transparent;
-
+      border: 2px solid rgb(42, 42, 42);
+   border-width:0px 0px 2px 0px;
       font-family: var(--font-base);
-      color: var(--secondary-color);
+      padding: 2rem;
+      color: var( --lightGray-color);
       outline: none;
+      font-size: 1rem;
     }
+
 
     textarea {
       height: 170px;
     }
 
     &:hover {
-      box-shadow: 0 0 25px var(--primary-color);
+      box-shadow: 0 0 25px #0d0c0c;
     }
   }
 
