--- a/frontend_react/src/container/About/gridimage/grid.css
+++ b/frontend_react/src/container/About/gridimage/grid.css
@@ -88,7 +88,7 @@
 
 
 .wrapper > div {
-  margin-left: -10rem;
+  margin-right: -10rem;
   border-radius: 15px;
 /* backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px); */
