--- a/frontend_react/src/index.css
+++ b/frontend_react/src/index.css
@@ -44,6 +44,7 @@ body {
     font-size: 1.6rem;
     overflow-x: hidden;
     background-size: 400% 400%;
+    background-color: #000;
 }
 
 #tsparticles {
