--- a/frontend_react/src/index.css
+++ b/frontend_react/src/index.css
@@ -19,7 +19,17 @@ font-family: "MarkPro-Heavy";
 src: url("./fonts/MarkPro-Heavy.e2c6ce4009c23ed34b4861cb4151990f.woff") format("truetype");
 font-weight: bold;
 }
+
+*, ::after, ::before {
+    margin: 0px;
+    padding: 0px;
+    box-sizing: inherit;
+}
+
 :root {
+  --main-size: 36;
+  --max-size: 64;
+   --responsive: calc(var(--min-size)*0.06em + (var(--max-size) - var(--min-size))*(0.12821vw - 0.53846px));
   --font-base: "MarkPro-Heavy", "sans-serif";
 --font-primary:  "D-DINCondensed-Bold", "sans-serif";
   --primary-color: #edf2f8;
@@ -34,18 +44,42 @@ font-weight: bold;
 
 }
 
-*, ::after, ::before {
-    margin: 0px;
-    padding: 0px;
-    box-sizing: inherit;
-}
 body {
   font-family: Circular Std Book,sans-serif;
     font-size: 1.6rem;
     overflow-x: hidden;
     background-size: 400% 400%;
     background-color: #000;
+    font-weight: 400;
+    margin: 0;
+     padding: 0;
 }
+/* body {
+
+  background: #f7f5f5;
+  color: #121821;
+  font-family: Grotesk,"Source Sans Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
+
+} */
+
+h1 {
+  letter-spacing: -5px;
+font-weight: 300;
+line-height: 100%;
+font-size: var(--responsive);
+}
+p{
+    font-weight: 500;
+  line-height: 1;
+  font-size: 15px;
+  letter-spacing: normal;
+  line-height: 1.3;
+  font-weight: 400;
+  max-width: 210px;
+  width: 100%;
+  line-height: 1.1;
+}
+
 
 #tsparticles {
   width: 100%;
