--- a/frontend_react/src/container/Header/Header.scss
+++ b/frontend_react/src/container/Header/Header.scss
@@ -17,7 +17,6 @@ span{
     display: grid;
     position: relative;
     margin-top: 15rem;
-
   @media screen and (min-width: 2000px) {
     padding-top: 8rem;
   }
@@ -26,8 +25,9 @@ span{
     flex-direction: column;
   }
 
-  @media screen and (max-width: 450px) {
-    padding: 6rem 1rem 2rem;
+  @media screen and (max-width: 750px) {
+    padding: 4rem 1rem 2rem;
+      grid-template-columns: auto ;
   }
 }
 
