added image styling

--- a/frontend_react/src/App.scss
+++ b/frontend_react/src/App.scss
@@ -63,9 +63,9 @@
 }
 
 .p-text {
-  font-size: 0.8rem;
+  font-size: 1.2rem;
   text-align: left;
-  color: var(--gray-color);
+  color: var(--white-color);
   line-height: 1.5;
    font-family: var(--font-primary);
    font-weight: 600;
