--- a/frontend_react/src/container/Header/Header.scss
+++ b/frontend_react/src/container/Header/Header.scss
@@ -15,6 +15,7 @@ span{
 
 }
 .app__header {
+  flex: 1;
     display: flex;
     position: relative;
     margin-top: 15rem;
@@ -90,7 +91,9 @@ span{
 // }
 
 .app__header-circles {
-  grid-column: 12/14;
+  flex: 0.75;
+  display: flex;
+  flex-direction: column;
   height: 100%;
   margin-left: 5rem;
 
@@ -152,6 +155,10 @@ span{
 
     div {
       margin: 1rem;
+    }
+    @media screen and (max-width: 750px){
+      .app__header-circles {
+  grid-column-start: 12/14;}
     }
   }
 }
